--- a/www/index.html
+++ b/www/index.html
@@ -27,7 +27,7 @@
                 <a href="#newReport" class="w3-btn-block w3-light-grey">Reportar</a>
             </div>
             <div class="w3-col s3">
-                <a href="historicoReports.html" class="w3-btn-block w3-light-grey">Historicos de Reports</a>
+                <a href="historicoReports.html" class="w3-btn-block w3-light-grey">Historico de Reports</a>
             </div>
             <div class="w3-col s3" style="width: 15%;">
              <!--     <a href="adm.html" class="w3-btn-block w3-light-grey">Login adm</a>-->
@@ -120,7 +120,7 @@
      />
 <area ng-click="placeShow('edFisica')" alt="edFisica" title="edFisica" shape="poly" coords="570,297,611,326,678,307,626,270"
      />
-<area ng-click="placeShow('ceagri2')" alt="ceagri2" title="ceagri2" shape="poly" coords="853,216,897,313,964,289,934,212"
+<area ng-click="placeShow('ceagri')" alt="ceagri" title="ceagri" shape="poly" coords="853,216,897,313,964,289,934,212"
      />
 <area ng-click="placeShow('florestal')" alt="florestal" title="florestal" shape="poly" coords="754,217,769,342,898,321,846,219"
      />
@@ -137,7 +137,7 @@
                     <br>
                     <input class="w3-input w3-border w3-round-xxlarge" maxlength="14" type="text" ng-model="report.cpf" name="first" required><br>
                     <span id="resposta"></span><br>
-                    <label class="w3-label w3-validate">Digite seu CPF/RG/Matricula da Universidade</label>
+                    <label class="w3-label w3-validate">Digite seu CPF</label>
                     <br>
                     <br>
                     <input class="w3-input w3-border w3-round-xxlarge" type="text" maxlength="45" name="email" ng-model="report.email" required>
