add img map lib ext ceagri 1

--- a/www/index.html
+++ b/www/index.html
@@ -107,6 +107,10 @@
     
 <area ng-click="placeShow('sede')" alt="sede" title="sede" shape="poly" coords="362,223,339,182,321,139,356,50,449,55,537,93,541,104,467,169"
     hidefocus="true" />
+     <area ng-click="placeShow('Biblioteca')" alt="Biblioteca" title="Biblioteca" shape="poly" coords="528,56,548,90,617,97,634,72"
+     />
+      <area ng-click="placeShow('Extensao')" alt="Extensao" title="Extensao" shape="poly" coords="644,74,630,102,700,142,722,109"
+     />
 <area ng-click="placeShow('zootecnia')" alt="zootecnia" title="zootecnia" shape="poly" coords="62,419,230,483,353,381,117,368"
      />
 <area ng-click="placeShow('transrural')" alt="transrural" title="transrural" shape="poly" coords="362,368,477,380,545,380,695,344,685,377,518,417,367,397"
@@ -120,11 +124,17 @@
      />
 <area ng-click="placeShow('edFisica')" alt="edFisica" title="edFisica" shape="poly" coords="570,297,611,326,678,307,626,270"
      />
-<area ng-click="placeShow('ceagri')" alt="ceagri" title="ceagri" shape="poly" coords="853,216,897,313,964,289,934,212"
+<area ng-click="placeShow('ceagri2')" alt="ceagri2" title="ceagri2" shape="poly" coords="858,224,878,256,945,245,934,224,924,217"
+     />
+     <area ng-click="placeShow('ceagri1')" alt="ceagri1" title="ceagri1" shape="poly" coords="884,266,945,253,968,300,904,314"
      />
 <area ng-click="placeShow('florestal')" alt="florestal" title="florestal" shape="poly" coords="754,217,769,342,898,321,846,219"
      />
-<area ng-click="placeShow('pesca')" alt="pesca" title="pesca" shape="poly" coords="972,309,829,339,849,393,986,371"  />
+<area ng-click="placeShow('pesca')" alt="pesca" title="pesca" shape="poly"  coords="777,346,788,388,989,368,965,321" />
+
+
+
+
 </map>
                     <br>
                     <br>
