--- a/www/index.html
+++ b/www/index.html
@@ -13,6 +13,7 @@
     <script src="js/appHome.js"></script>
 
     <script type="text/javascript" src="js/angular-base64-upload.js"></script>
+    <script src="js/funcoes.js" type="text/javascript"></script>
 </head>
 
 <body ng-controller="indexController">
@@ -145,8 +146,8 @@
                     <label class="w3-label w3-validate">Descreva o problema ocorrido</label>
                     <br>
                     <br>
-                    <input class="w3-input w3-border w3-round-xxlarge" maxlength="14" type="text" ng-model="report.cpf" name="first" required><br>
-                    <span id="resposta"></span><br>
+                    <input class="w3-input w3-border w3-round-xxlarge" name="txtCPF" maxlength="14" onkeypress="javascript: return EntradaNumerico(event);" onblur="javascript: FG_FormatarCPF('txtCPF');" onfocus="javascript: RemoveMask('txtCPF');" type="text" id="txtCPF"    ng-model="report.cpf" name="first" required>
+                 
                     <label class="w3-label w3-validate">Digite seu CPF</label>
                     <br>
                     <br>
@@ -272,7 +273,6 @@
             </div>
 
 
-
             <script type="text/javascript" src="js/slideShow.js"></script>
             <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
             <script type="text/javascript" src="js/jquery.maphilight.min.js"></script>
@@ -293,6 +293,7 @@
                     });
                 });
             </script>
+
 
 </body>
 
