--- a/www/adm.html
+++ b/www/adm.html
@@ -10,7 +10,7 @@
 
 <head>
     <script src="js/angular.min.js"></script>
-    <script src="js/app.js"></script>
+    <script src="js/appAdm.js"></script>
     <script type="text/javascript" src="js/angular-base64-upload.js"></script>
 
 </head>
@@ -19,10 +19,10 @@
 
     <!------------------------------------------------------------------------------- Links (sit on top) -->
     <div class="w3-top ">
-        <div class="w3-container w3-light-grey ">
+        <div class="w3-container w3-light-blue ">
 
             <div class="w3-col s3 w3-right">
-                <a href="index.html" class="w3-btn-block w3-light-grey">Sair</a>
+                <a href="index.html"ng-click="sair()" class="w3-btn-block w3-light-grey">Sair</a>
             </div>
         </div>
     </div>
