--- a/www/historicoReports.html
+++ b/www/historicoReports.html
@@ -21,7 +21,7 @@
 
     <!-- Links (sit on top) -->
     <div class="w3-top ">
-        <div class="w3-container w3-light-grey ">
+        <div class="w3-container w3-light-blue ">
 
             <div class="w3-col s3 w3-right">
                 <a href="index.html" class="w3-btn-block w3-light-grey">Sair</a>
