--- a/www/index.html
+++ b/www/index.html
@@ -226,6 +226,7 @@
                         <div class="w3-container w3-border-top w3-padding-16 w3-light-grey">
 
                             <img style="max-width:100%;" style="max-height:100%" src="data:image/jpg;base64,{{auxImg}}" />
+                             <label id="validacaoImg" class="validacao w3-text-blue" style="visibility: hidden;">Esse report não contém imagem.</label>
                             <br>
                             <br>
                             <div class="w3-panel  w3-leftbar  w3-border-blue">
